# Rust-copycenter

./: .gitignore  Cargo.toml
sql/: create_database.sql  sample_data.sql
src/: errors_handle.rs  files.rs  jobs.rs  lib.rs  main.rs  users.rs
src/files/: enums.rs  errors.rs  functions.rs  mod.rs  new.rs  store_files.rs
src/jobs/: enums.rs  mod.rs
src/users/: mod.rs
tm/: mn
