[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19.7", features = []}
postgres-types = {version = "0.2.6", features = ["derive", "with-time-0_3"]}
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
sha256 = "1.5.0"
time = "0.3.32"
